--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ header .nav a:hover {
     color: #86B5E1;
 }
 .rainbowimg {
-    background-image: url(assets/sunset-2593892_960_720.jpg);
+    background-image: url(assets/sunset-2593892_960_720.png);
     height: 250px;
     background-repeat: repeat;
     background-position: 0px -17px;
